fixed header glitch and logo alignment

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -45,7 +45,8 @@ h4{
 }
 
 .glitch {
-  padding: 10px 0px 10px 0;
+  /* top | right | bottom | left */
+  margin: 30px 0 0 0;
 }
 
 .container {
@@ -62,7 +63,7 @@ h4{
 
 .main-logo {
   /* top | right | bottom | left */
-  margin: 10px 0 0 0;
+  margin: 20px 0 0 0;
 }
 
 form {
